# LiveRtcDemo

./: CMakeLists.txt  DlgLivePull.cpp  DlgLivePull.h  DlgLivePush.cpp  DlgLivePush.h  DlgRtmpPull.cpp  DlgRtmpPull.h  DlgRtmpPush.cpp  DlgRtmpPush.h  DlgVideo.h  LiveWin32.aps  LiveWin32.cpp  LiveWin32.h  LiveWin32.rc  LiveWin32Dlg.cpp  LiveWin32Dlg.h  README.md  VideoRendererWin32.cpp  VideoRendererWin32.h  resource.h  stdafx.cpp  stdafx.h
Win/: CMakeLists.txt  DlgLivePull.cpp  DlgLivePull.h  DlgLivePush.cpp  DlgLivePush.h  DlgVideo.cpp  LiveWin32.h  LiveWin32Dlg.h  targetver.h
desktop_capture/: desktop_capture.cpp  desktop_capture.h  desktop_capture_source.cpp  desktop_capture_source.h
http/: crtc_global.cpp  crtc_global.h  crtc_http.cpp  crtc_http.h
libcommon/: CMakeLists.txt  crtc_global.cpp  crtc_global.h  crtc_media_sink.cpp  crtc_media_sink.h
libcommon/http/: crtc_json.cpp  crtc_json.h
libcommon/media/: crtc_media_sink.cpp  crtc_media_sink.h
media/: crtc_media_sink.cpp  crtc_media_sink.h
track_capture/: ctrack_capture.cpp  ctrack_capture.h
video_render/: cvideo_render.cpp  cvideo_render.h  cvideo_render_factory.cpp  cvideo_render_factory.h  d3d_renderer.cpp  d3d_renderer.h
